# Kagami

./: .buildversion  .gitignore  Pipfile  README.md  build.py  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile  entrypoint.sh
kagami/: __init__.py  core.py  fileSys.py  filesys.py  functional.py  logConfig.py  logger.py  prelim.py  profile.py  unitest.py
kagami/bio/portals/: __init__.py  gffPortal.py
kagami/comm/: __init__.py  functional.py  logger.py  misc.py  path.py  types.py
kagami/common/: functional.py  path.py  types.py
kagami/core/: __init__.py  etc.py  filesys.py  functional.py  logger.py  optvalue.py  path.py  prelim.py
kagami/core/dtypes/: __init__.py  factor.py  namedArray.py  table.py
kagami/core/portals/: configPortal.py  tablePortal.py  textPortal.py  webPortal.py
kagami/core/wrappers/: __init__.py  rWrapper.py  sqliteWrapper.py
kagami/coreTypes/: coreType.py  namedIndex.py  structArray.py  table.py
kagami/dtypes/: __init__.py  coreType.py  factor.py  namedIndex.py  structArray.py  table.py
kagami/ml/: __init__.py  classifier.py  dataset.py  glm.py  index.py  model.py  preprocessor.py  resampler.py
kagami/portals/: __init__.py  configPortal.py  csvPortal.py  execPortal.py  gffPortal.py  tablePortal.py  textPortal.py  webPortal.py
kagami/tests/: test_core_dtypes.py  test_core_dtypes_factor.py  test_core_dtypes_table.py  test_dtypes_coreType.py  test_dtypes_factor.py  test_dtypes_namedIndex.py  test_dtypes_performance.py  test_dtypes_structArray.py  test_dtypes_table.py
kagami/tests/comm_tests/: test_functional.py  test_misc.py  test_path.py  test_types.py
kagami/tests/core/: test_core.py  test_etc.py  test_functional.py  test_path.py
kagami/tests/core_tests/: test_etc.py  test_functional.py  test_metadata.py  test_optvalue.py  test_path.py
kagami/tests/dtypes/: test_table.py
kagami/tests/dtypes_tests/: test_coreType.py  test_factor.py  test_namedIndex.py  test_structArray.py  test_table.py
kagami/tests/portals_tests/: test_configPortal.py  test_tablePortal.py  test_textPortal.py  test_webPortal.py
kagami/tests/wrappers_tests/: test_binWrapper.py  test_sqliteWrapper.py
kagami/wrappers/: __init__.py  binWrapper.py  rWrapper.py  sqliteWrapper.py
src/kagami/: __init__.py  unitest.py
src/kagami/tests/portals_tests/: test_webPortal.py
